# E-commerce-management

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  schema.sql
app/: config.py  db.py  main.py  test.py
app/addresses/: queries.py  routes.py  schemas.py
app/auth/: dependencies.py  queries.py  routes.py  schemas.py  security.py
app/cart/: queries.py  routes.py  schemas.py
app/email/: mailer.py
app/invoices/: pdf.py
app/orders/: queries.py  routes.py  schemas.py
app/products/: queries.py  routes.py  schemas.py
app/reviews/: queries.py  routes.py  schemas.py
app/wallet/: queries.py  routes.py  schemas.py
app/wishlist/: queries.py  routes.py  schemas.py
